tests/baselines/reference/typeParametersShouldNotBeEqual2.errors.txt
==== tests/cases/compiler/typeParametersShouldNotBeEqual2.ts (6 errors) ====
    function ff<T extends Date, U extends Date, V>(x: T, y: U, z: V) {
        var zz: Object;
        x = x;  // Ok
        x = y;  // Ok
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        x = z;  // Error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'T'.
        z = x;  // Error
        ~
!!! error TS2323: Type 'T' is not assignable to type 'V'.
        y = z;  // Error
        ~
!!! error TS2323: Type 'V' is not assignable to type 'U'.
        z = y;  // Error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'V'.
        x = zz;  // Error
        ~
!!! error TS2323: Type 'Object' is not assignable to type 'T'.
        zz = x;  // Ok
    }
    